--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 node_modules/
 
 # # Playwright reports and test results
-# playwright-report/
-# test-results/
-# report/
+playwright-report/
+test-results/
+report/
 
-# # Environment variables
-# .env.**
+# Environment variables
+.env.**/
 
 # # Downloaded files
 # assets/downloads/
