--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.13.10",
-    "@typescript-eslint/eslint-plugin": "^8.27.0",
-    "@typescript-eslint/parser": "^8.27.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.22.0",
-    "eslint-plugin-playwright": "^2.2.0"
+    "eslint": "^9.23.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
+    "typescript-eslint": "^8.29.0"
   },
   "dependencies": {
+    "allure-js-commons": "^3.2.1",
+    "allure-playwright": "^3.2.1",
     "crypto-js": "^4.2.0",
     "csv-parse": "^5.6.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "typescript": "^5.8.2"
   },
   "scripts": {
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "build": "tsc",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
